@@ -120,7 +120,7 @@ gint display_scroptions_dbox()
 	}
 
 	gtk_widget_destroy(dbox);
-    ti68k_engine_unhalt();
+    ti68k_engine_start();
 
 	return 0;
 }
