@@ -186,7 +186,7 @@ gint display_wait_dbox(void)
     result = gtk_dialog_run(GTK_DIALOG(dbox));
 	switch (result) {
 	case GTK_RESPONSE_OK:
-		ti68k_engine_unhalt();
+		ti68k_engine_start();
 		break;
 	default:
 		break;
