@@ -2,6 +2,7 @@ SubVersion: $Id$
 
 - 14/07/2004, version 1.74: roms
 	SDL removed for GTK: screen and keyboard support rewritten from scratch !
+	Debugger raised on event from thread.
 
 - 12/07/2004, version 1.73: roms
 	To do:
